# lib_xcore_math

./: .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  CODEOWNERS  Dockerfile  Jenkinsfile  Makefile  README.rst  index.rst  settings.json  settings.yml
example/bfp_demo/: CMakeLists.txt  README.rst  main.c
example/fft_demo/: CMakeLists.txt  README.rst  main.c
example/filter_demo/: CMakeLists.txt  README.rst  filter_16bit_fir.c  filter_32bit_biquad.c  filter_32bit_fir.c  main.c
example/filter_demo/src/: filter_32bit_biquad.c
lib_xcore_math/: CMakeLists.txt  build_options.cmake  lib_build_info.cmake  module_build_info  settings.json
lib_xcore_math/api/: xcore_math.h
lib_xcore_math/api/xmath/: api.h  dct.h  fft.h  filter.h  q_format.h  types.h  util.h  xmath.h  xmath_conf.h
lib_xcore_math/python/: gen_biquad_filter_s32.py  gen_fft_table.py  gen_fir_filter_s16.py  gen_fir_filter_s32.py  gen_rot_table.py  xmath_script.py
lib_xcore_math/script/: gen_biquad_filter_s32.py  gen_fft_table.py  gen_fir_filter_s16.py  gen_fir_filter_s32.py  gen_hann_windows.py  gen_mel_filters.py  gen_rot_table.py  xmath_script.py
lib_xcore_math/src/bfp/: bfp_alloc.c  bfp_complex_s16.c  bfp_complex_s32.c  bfp_init.c  bfp_s16.c  bfp_s32.c
lib_xcore_math/src/dct/: dct8x8.c  dct_forward.c  dct_inverse.c
lib_xcore_math/src/fft/: fft_bfp.c  fft_f32.c
lib_xcore_math/src/filter/: filters.c
lib_xcore_math/src/mel_spectrogram/: mel_spectrogram.c
lib_xcore_math/src/scalar/: scalar_f32.c  scalar_float_complex_sXX.c  scalar_float_s32.c  scalar_float_s64.c  scalar_ops.c  scalar_qXX.c
lib_xcore_math/src/vect/: chunk_s32.c  complex_prepare.c  convolve.c  mat_mul.c  prepare.c  vect_complex_mag_rot_tables.c  vect_complex_s16.c  vect_complex_s32.c  vect_f32.c  vect_float_s32.c  vect_s16.c  vect_s32.c  vpu_const_vects.c  vpu_const_vects.h  vpu_helper.h
lib_xs3_math/: CMakeLists.txt  Makefile  lib.mk  lib_xs3_math.cmake  module_build_info  settings.json
lib_xs3_math/api/: bfp_math.h  q_format.h  xs3_api.h  xs3_math.h  xs3_math_conf.h  xs3_math_types.h  xs3_scalar.h  xs3_util.h  xs3_vpu.h  xs3_vpu_info.h  xs3_vpu_scalar_ops.h
lib_xs3_math/api/bfp/: bfp.h  bfp_ch_pair.h  bfp_ch_pair_s16.h  bfp_ch_pair_s32.h  bfp_complex.h  bfp_complex_s16.h  bfp_complex_s32.h  bfp_fft.h  bfp_init.h  bfp_misc.h  bfp_s16.h  bfp_s32.h
lib_xs3_math/api/high/: xs3_bfp.h  xs3_bfp_ch_pair.h  xs3_bfp_complex.h  xs3_bfp_init.h  xs3_bfp_statistics.h  xs3_dct.h  xs3_fft.h  xs3_filters.h  xs3_math_util.h
lib_xs3_math/api/low/: xs3_bfp_ch_pair_low.h  xs3_bfp_complex_low.h  xs3_bfp_init_low.h  xs3_bfp_low.h  xs3_fft_low.h  xs3_filters_low.h  xs3_math_util_low.h  xs3_statistics_low.h  xs3_vpu_scalar_ops.h
lib_xs3_math/api/scalar/: scalar_float.h  xs3_f32.h  xs3_float_complex_s16.h  xs3_float_complex_s32.h  xs3_float_s32.h  xs3_scalar.h
lib_xs3_math/api/vect/: dct.h  xs3_chunk_s32.h  xs3_fft.h  xs3_filters.h  xs3_mixed.h  xs3_vect.h  xs3_vect_ch_pair.h  xs3_vect_ch_pair_s16.h  xs3_vect_ch_pair_s32.h  xs3_vect_complex.h  xs3_vect_complex_s16.h  xs3_vect_complex_s32.h  xs3_vect_f32.h  xs3_vect_s16.h  xs3_vect_s32.h  xs3_vect_s8.h
lib_xs3_math/api/xmath/: dct.h  fft.h  types.h
lib_xs3_math/doc/: Doxyfile  Doxyfile.inc  Makefile  README.rst  conf.py  index.rst
lib_xs3_math/doc/_static/: custom_style.css
lib_xs3_math/doc/src/: alignment.md  api_status.md  examples.rst  fft_lengths.md  fft_lengths.rst  getting_started.md  getting_started.rst  mainpage.md  notes.md  notes.rst  saturation.md
lib_xs3_math/script/: gen_biquad_filter_s32.py  gen_fft_table.py  gen_fir_filter_s16.py  gen_fir_filter_s32.py  gen_rot_table.py  xmath_script.py  xs3_math_script.py
lib_xs3_math/src/asm/: asm_helper.h  xs3_abs_vect.S  xs3_add_vect.S  xs3_clip_vect.S.todo  xs3_cls_array.S  xs3_mul_vec.S  xs3_rect_vect.S  xs3_s16_to_s32.S  xs3_s32_to_s16.S  xs3_scalar_mul_vec.S  xs3_set_array.S  xs3_sub_vect.S
lib_xs3_math/src/bfp/: bfp_alloc.c  bfp_ch_pair.c  bfp_complex_s16.c  bfp_complex_s32.c  bfp_fft.c  bfp_init.c  bfp_s16.c  bfp_s32.c
lib_xs3_math/src/dct/: xs3_dct_forward.c  xs3_dct_inverse.c  xs3_vect_s32_dct8x8.c
lib_xs3_math/src/fft/: fft_f32.c
lib_xs3_math/src/high/: bfp.c  bfp_ch_pair.c  bfp_complex.c  bfp_fft.c  bfp_init.c  bfp_stats.c  xs3_bfp.c  xs3_bfp_ch_pair.c  xs3_bfp_complex.c  xs3_bfp_fft.c  xs3_bfp_init.c  xs3_bfp_statistics.c  xs3_scalar_complex.c
lib_xs3_math/src/low/: vpu_const_vects.c  vpu_const_vects.h  vpu_helper.h  xs3_abs_vect.c  xs3_add_vect.c  xs3_calc_params.c  xs3_cls_array.c  xs3_dot.c  xs3_headroom_vect.c  xs3_rect_vect.c  xs3_s16_to_s32.c  xs3_scalar_mul_vect.c  xs3_set_array.c  xs3_set_vect.c  xs3_shl_vect.c  xs3_sqrt_s32.c  xs3_stats.c  xs3_stats_calc_params.c  xs3_sub_vect.c  xs3_sum.c  xs3_vect_abs_clip_rect.c  xs3_vect_add_sub.c  xs3_vect_depth_convert.c  xs3_vect_dot.c  xs3_vect_headroom.c  xs3_vect_inverse.c  xs3_vect_mul.c  xs3_vect_set.c  xs3_vect_shl.c  xs3_vect_sqrt.c  xs3_vect_stats.c  xs3_vect_sum.c
test/: CMakeLists.txt  Makefile  fetch_dependencies.py  repos.list
test/bfp_tests/: CMakeLists.txt  Makefile
test/dct_tests/: CMakeLists.txt
test/fft_test/: .gitignore  Makefile  app.mk
test/fft_tests/: .gitignore  CMakeLists.txt  Makefile  config.xscope
test/filter_tests/: CMakeLists.txt  biquad_coefs.csv  coefs.txt
test/legacy_build/: .gitignore  CMakeLists.txt  Makefile
test/scalar_tests/: CMakeLists.txt
test/shared/: CMakeLists.txt  Makefile
test/unit_test/: Makefile  app.mk  config.xscope  xdbg.py
test/vect_tests/: CMakeLists.txt  Makefile
test/xcommon_cmake/: CMakeLists.txt
test/xs3_tests/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile  config.xml  test_deps.cmake
tests/bfp_tests/: CMakeLists.txt
tests/dct_tests/: CMakeLists.txt
tests/fft_tests/: CMakeLists.txt
tests/filter_tests/: CMakeLists.txt
tests/legacy_build/: Makefile
tests/scalar_tests/: CMakeLists.txt
tests/shared/: shared.cmake
tests/vect_tests/: CMakeLists.txt
tests/vpu_tests/: CMakeLists.txt
tests/xc_compat/: CMakeLists.txt
tests/xs3_tests/: CMakeLists.txt
(+1791 files in other folders)
